--- a/sassy_s/_comments.scss
+++ b/sassy_s/_comments.scss
@@ -1,5 +1,9 @@
 /* =Comments
 ----------------------------------------------- */
 
+.comment-content a {
+	word-wrap: break-word;
+}
+
 .bypostauthor {
 }
