--- a/sassy_s/style.scss
+++ b/sassy_s/style.scss
@@ -1,10 +1,10 @@
 /*!
 Theme Name: _s
-Theme URI: https://wpcom-themes.svn.automattic.com/_s/
+Theme URI: http://underscores.me
 Author: Automattic
 Author URI: http://automattic.com/
 Description: Hi. I'm a starter theme called <code>_s</code>, or <em>underscores</em>, if you like. I'm a theme meant for hacking so don't use me as a <em>Parent Theme</em>. Instead try turning me into the next, most awesome, WordPress theme out there. That's what I'm here for.
-Version: 1.2-wpcom
+Version: 1.3-wpcom
 License: GNU General Public License
 License URI: license.txt
 Tags:
@@ -59,3 +59,4 @@ $header-font: $base-font; // you can refer to other variables
 @import 'navigation';
 @import 'comments';
 @import 'widgets';
+@import 'infinitescroll';
