--- a/sassy_s/_postformats.scss
+++ b/sassy_s/_postformats.scss
@@ -1,7 +1,8 @@
 /* =Asides
 ----------------------------------------------- */
 
-.blog .format-aside .entry-title,
-.archive .format-aside .entry-title {
-	display: none;
+.blog .format-aside, .archive .format-aside {
+	.entry-title {
+		display: none;
+	}
 }
