--- a/sassy_s/_comments.scss
+++ b/sassy_s/_comments.scss
@@ -1,9 +1,7 @@
 /* =Comments
 ----------------------------------------------- */
-
 .comment-content a {
 	word-wrap: break-word;
 }
 
-.bypostauthor {
-}
+.bypostauthor {}
