--- a/sassy_s/_content.scss
+++ b/sassy_s/_content.scss
@@ -4,7 +4,7 @@
 .sticky {
 }
 .hentry {
-	margin: 0 0 1.5em;
+	margin: 0 0 $vspacing;
 }
 .entry-meta {
 	clear: both;
@@ -12,15 +12,16 @@
 .byline {
 	display: none;
 }
-.single .byline,
-.group-blog .byline {
-	display: inline;
+.single, .group-blog {
+	.byline {
+		display: inline;
+	}
 }
 .entry-content,
 .entry-summary {
-	margin: 1.5em 0 0;
+	margin: $vspacing 0 0;
 }
 .page-links {
 	clear: both;
-	margin: 0 0 1.5em;
+	margin: 0 0 $vspacing;
 }
