--- a/sassy_s/_media.scss
+++ b/sassy_s/_media.scss
@@ -1,11 +1,13 @@
 /* =Media
 ----------------------------------------------- */
 
-.site-header img,
-.entry-content img,
-.comment-content img,
-.widget img {
-	max-width: 100%; /* Fluid images for posts, comments, and widgets */
+.site-header,
+.entry-content,
+.comment-content,
+.widget {
+	img {
+		max-width: 100%; /* Fluid images for posts, comments, and widgets */
+	}
 }
 .site-header img,
 .entry-content img,
@@ -20,45 +22,81 @@ img.size-full {
 	max-width: 100%;
 	width: auto; /* Prevent stretching of full-size images with height and width attributes in IE8 */
 }
-.entry-content img.wp-smiley,
-.comment-content img.wp-smiley {
-	border: none;
-	margin-bottom: 0;
-	margin-top: 0;
-	padding: 0;
+.entry-content,
+.comment-content {
+	img.wp-smiley {
+		border: none;
+		margin-bottom: 0;
+		margin-top: 0;
+		padding: 0;
+	}
 }
+// Image Captions
 .wp-caption {
 	border: 1px solid #ccc;
-	margin-bottom: 1.5em;
+	margin-bottom: $vspacing;
 	max-width: 100%;
+
+	img[class*="wp-image-"] {
+		display: block;
+		margin: 1.2% auto 0;
+		max-width: 98%;
+	}
+	.wp-caption-text {
+		text-align: center;
+		margin: 0.8075em 0;
+	}
 }
-.wp-caption img[class*="wp-image-"] {
-	display: block;
-	margin: 1.2% auto 0;
-	max-width: 98%;
+
+// Galleries
+.gallery {
+
+	@include clearfix();
+
+	margin-bottom: $vspacing;
+
+	.gallery-item {
+		float: left;
+
+		.gallery-icon {
+			a { display: block; }
+
+			img {
+				border: none;
+				height: auto;
+				margin-bottom: 0;
+			}
+		}
+
+		.gallery-caption {
+			margin: 0;
+			text-align: center;
+		}
+
+	}
+
 }
-.wp-caption-text {
-	text-align: center;
+
+@mixin gallery_column ( $margin: 2, $num: 4 ){
+	.gallery-columns-#{$num} .gallery-item {
+     width: ( 100% - $margin * ( $num - 1 ) ) / $num;
+     margin-right: $margin;
+  }
+  	.gallery-columns-#{$num} .gallery-item:nth-of-type(#{$num}n - #{$num}) {
+     margin-right: 0;
+     clear: right;
+  }
+
 }
-.wp-caption .wp-caption-text {
-	margin: 0.8075em 0;
-}
-.site-content .gallery {
-	margin-bottom: 1.5em;
-}
-.gallery-caption {
-}
-.site-content .gallery a img {
-	border: none;
-	height: auto;
-	max-width: 90%;
-}
-.site-content .gallery dd {
-	margin: 0;
-}
-.site-content .gallery-columns-4 .gallery-item {
-}
-.site-content .gallery-columns-4 .gallery-item img {
+
+/* Fluid Gallery Columns
+   works well if you remove the default gallery styling
+   by adding the following to your functions.php
+   add_filter( 'use_default_gallery_style', '__return_false' );
+*/
+
+@for $i from 2 through 9 {
+	@include gallery_column( 2, $i );
 }
 
 /* Make sure embeds and iframes fit their containers */
