--- a/sassy_s/_navigation.scss
+++ b/sassy_s/_navigation.scss
@@ -1,16 +1,18 @@
 /* =Navigation
 ----------------------------------------------- */
 
-.site-content .site-navigation {
-	margin: 0 0 1.5em;
-	overflow: hidden;
-}
-.site-content .nav-previous {
-	float: left;
-	width: 50%;
-}
-.site-content .nav-next {
-	float: right;
-	text-align: right;
-	width: 50%;
+.site-content {
+	.site-navigation {
+		margin: 0 0 $vspacing;
+		overflow: hidden;
+	}
+	.nav-previous {
+		float: left;
+		width: 50%;
+	}
+	.nav-next {
+		float: right;
+		text-align: right;
+		width: 50%;
+	}
 }
