--- a/sassy_s/_widgets.scss
+++ b/sassy_s/_widgets.scss
@@ -2,15 +2,18 @@
 ----------------------------------------------- */
 
 .widget {
-	margin: 0 0 1.5em;
+	margin: 0 0 $vspacing;
+
+	/* Make sure select elements fit in widgets */
+	select {
+		max-width: 100%;
+	}
+
+	/* Search widget */
+	#searchsubmit {
+		display: none;
+	}
+
 }
 
-/* Make sure select elements fit in widgets */
-.widget select {
-	max-width: 100%;
-}
 
-/* Search widget */
-#searchsubmit {
-	display: none;
-}
