--- a/sassy_s/_menu.scss
+++ b/sassy_s/_menu.scss
@@ -70,8 +70,20 @@
 
 /* Small menu */
 .menu-toggle {
+	display: none;
 	cursor: pointer;
 }
-.main-small-navigation .menu {
+.main-small-navigation ul {
 	display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .menu-toggle,
+  .main-small-navigation ul.nav-menu.toggled-on {
+    display: block;
+  }
+
+  .main-navigation ul {
+    display: none;
+  }
 }
