Standardize navigation class names. See https://github.com/Automattic/_s/commit/fa3d86936ab753b978b64b153d66ac37636c041f

--- a/sassy_s/_menu.scss
+++ b/sassy_s/_menu.scss
@@ -1,7 +1,7 @@
 /* =Menu
 ----------------------------------------------- */
 
-.main-navigation {
+.navigation-main {
 	clear: both;
 	display: block;
 	float: left;
@@ -83,7 +83,7 @@
     display: block;
   }
 
-  .main-navigation ul {
+  .navigation-main ul {
     display: none;
   }
 }
