--- a/sassy_s/_typography.scss
+++ b/sassy_s/_typography.scss
@@ -184,26 +184,26 @@ input::-moz-focus-inner { /* Corrects inner padding and border displayed oddly i
 	border: 0;
 	padding: 0;
 }
-input[type=text],
-input[type=email],
-input[type=password],
-input[type=search],
+input[type="text"],
+input[type="email"],
+input[type="password"],
+input[type="search"],
 textarea {
 	color: #666;
 	border: 1px solid #ccc;
 	border-radius: 3px;
 }
-input[type=text]:focus,
-input[type=email]:focus,
-input[type=password]:focus,
-input[type=search]:focus,
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="password"]:focus,
+input[type="search"]:focus,
 textarea:focus {
 	color: #111;
 }
-input[type=text],
-input[type=email],
-input[type=password],
-input[type=search] {
+input[type="text"],
+input[type="email"],
+input[type="password"],
+input[type="search"] {
 	padding: 3px;
 }
 textarea {
