--- a/sassy_s/_typography.scss
+++ b/sassy_s/_typography.scss
@@ -35,7 +35,8 @@ ul {
 ol {
 	list-style: decimal;
 }
-ul ul, ol ol, ul ol, ol ul {
+li > ul,
+li > ol {
 	margin-bottom: 0;
 	margin-left: $vspacing;
 }
