Formatting cleanup. See https://github.com/Automattic/_s/commit/c4f2aa32ce18db79e6b9cd1d01d1894fedd90d5e

--- a/sassy_s/_menu.scss
+++ b/sassy_s/_menu.scss
@@ -36,9 +36,9 @@
 
 		// second level
 		ul {
-			-moz-box-shadow: 0 3px 3px rgba(0,0,0,0.2);
-			-webkit-box-shadow: 0 3px 3px rgba(0,0,0,0.2);
-			box-shadow: 0 3px 3px rgba(0,0,0,0.2);
+			-moz-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+			-webkit-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+			box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
 			display: none;
 			float: left;
 			position: absolute;
