--- a/sassy_s/_global.scss
+++ b/sassy_s/_global.scss
@@ -27,3 +27,20 @@
 	clip: rect(1px, 1px, 1px, 1px);
 	position: absolute !important;
 }
+
+/* Clearing */
+.clear:before,
+.clear:after,
+[class*="content"]:before,
+[class*="content"]:after,
+[class*="site"]:before,
+[class*="site"]:after {
+	content: '';
+	display: table;
+}
+
+.clear:after,
+[class*="content"]:after,
+[class*="site"]:after {
+	clear: both;
+}
