--- a/sassy_s/style.scss
+++ b/sassy_s/style.scss
@@ -12,6 +12,8 @@ Tags:
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 
+_s is based on Underscores http://underscores.me/, (C) 2012-2013 Automattic, Inc.
+
 Resetting and rebuilding styles have been helped along thanks to the fine work of
 Eric Meyer http://meyerweb.com/eric/tools/css/reset/index.html
 along with Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
