Changes to responsive image handling. See https://github.com/Automattic/_s/commit/f424711c65a24071d40bbabe88e922d76a26aac2

--- a/sassy_s/_typography.scss
+++ b/sassy_s/_typography.scss
@@ -110,6 +110,10 @@ table {
 th {
 	font-weight: bold;
 }
+img {
+	height: auto; /* Make sure images are scaled correctly. */
+	max-width: 100%; /* Adhere to container width. */
+}
 button,
 input,
 select,
