Reintroduce 'nav-' prefix. See https://github.com/Automattic/_s/commit/48702363ebe2499dd021d4291cc5ffc0a636dbf5

--- a/sassy_s/_navigation.scss
+++ b/sassy_s/_navigation.scss
@@ -5,12 +5,12 @@
 	margin: 0 0 $vspacing;
 	overflow: hidden;
 
-	.previous {
+	.nav-previous {
 		float: left;
 		width: 50%;
 	}
 
-	.next {
+	.nav-next {
 		float: right;
 		text-align: right;
 		width: 50%;
