refactor clearfix mixin and use it in _global.scss

--- a/sassy_s/_global.scss
+++ b/sassy_s/_global.scss
@@ -50,18 +50,8 @@
 }
 
 /* Clearing */
-.clear:before,
-.clear:after,
-[class*="content"]:before,
-[class*="content"]:after,
-[class*="site"]:before,
-[class*="site"]:after {
-	content: '';
-	display: table;
-}
-
-.clear:after,
-[class*="content"]:after,
-[class*="site"]:after {
-	clear: both;
+.clear,
+[class*="content"],
+[class*="site"] {
+	@include clearfix;
 }
