--- a/sassy_s/_mixins.scss
+++ b/sassy_s/_mixins.scss
@@ -1,9 +1,7 @@
 @mixin clearfix() {
     &:before, &:after {
-        content: "\0020";
-        display: block;
-        height: 0;
-        overflow: hidden;
+        content: "";
+        display: table;
     }
     &:after {
         clear: both;
