Style updates to match changes to nav js. See https://github.com/Automattic/_s/commit/55596d6c673a9e55df6d0056d62b50d73773a7d0

--- a/sassy_s/_menu.scss
+++ b/sassy_s/_menu.scss
@@ -71,13 +71,10 @@
 	display: none;
 	cursor: pointer;
 }
-.main-small-navigation ul {
-	display: none;
-}
 
 @media screen and (max-width: 600px) {
   .menu-toggle,
-  .main-small-navigation ul.nav-menu.toggled-on {
+  .navigation-main.toggled-on .nav-menu {
     display: block;
   }
 
