Add .page-content class. See https://github.com/Automattic/_s/commit/d406dc8f8c8774848442dbb7f1b634e4aa0e5e66

--- a/sassy_s/_media.scss
+++ b/sassy_s/_media.scss
@@ -1,6 +1,7 @@
 /* =Media
 ----------------------------------------------- */
 
+.page-content,
 .entry-content,
 .comment-content {
 	img.wp-smiley {
