use .main-navigation instead of .navigation-main. See https://github.com/Automattic/_s/commit/d480e820c378ee4ec00e5db37526f4594e977567

--- a/sassy_s/_menu.scss
+++ b/sassy_s/_menu.scss
@@ -1,7 +1,7 @@
 /* =Menu
 ----------------------------------------------- */
 
-.navigation-main {
+.main-navigation {
 	clear: both;
 	display: block;
 	float: left;
@@ -74,11 +74,11 @@
 
 @media screen and (max-width: 600px) {
   .menu-toggle,
-  .navigation-main.toggled-on .nav-menu {
+  .main-navigation.toggled-on .nav-menu {
     display: block;
   }
 
-  .navigation-main ul {
+  .main-navigation ul {
     display: none;
   }
 }
