--- a/sassy_s/_menu.scss
+++ b/sassy_s/_menu.scss
@@ -74,7 +74,7 @@
 
 @media screen and (max-width: 600px) {
   .menu-toggle,
-  .main-navigation.toggled-on .nav-menu {
+  .main-navigation.toggled .nav-menu {
     display: block;
   }
 
