--- a/sassy_s/_layout.scss
+++ b/sassy_s/_layout.scss
@@ -5,10 +5,10 @@
 		margin: 0 -25% 0 0;
 		width: 100%;
 	}
-	.site-content {
+	.site-main {
 		margin: 0 25% 0 0;
 	}
-	.site-main .widget-area { /* Sidebar 1 */
+	.site-content .widget-area { /* Sidebar 1 */
 		float: right;
 		overflow: hidden;
 		width: 25%;
@@ -22,10 +22,10 @@
 		margin: 0 0 0 -25%;
 		width: 100%;
 	}
-	.site-content {
+	.site-main {
 		margin: 0 0 0 25%;
 	}
-	.site-main .widget-area { /* Sidebar 1 */
+	.site-content .widget-area { /* Sidebar 1 */
 		float: left;
 		overflow: hidden;
 		width: 25%;
