Correct class on main element. See https://github.com/Automattic/_s/commit/0ac069a0bf51ad72d6548550a213eeffa18d876e

--- a/sassy_s/_navigation.scss
+++ b/sassy_s/_navigation.scss
@@ -1,7 +1,7 @@
 /* =Navigation
 ----------------------------------------------- */
 
-.site-content [class*="navigation"] {
+.site-main [class*="navigation"] {
 	margin: 0 0 $vspacing;
 	overflow: hidden;
 
