--- a/sassy_s/_typography.scss
+++ b/sassy_s/_typography.scss
@@ -184,6 +184,7 @@ input::-moz-focus-inner { /* Corrects inner padding and border displayed oddly i
 }
 input[type="text"],
 input[type="email"],
+input[type="url"],
 input[type="password"],
 input[type="search"],
 textarea {
@@ -193,6 +194,7 @@ textarea {
 }
 input[type="text"]:focus,
 input[type="email"]:focus,
+input[type="url"]:focus,
 input[type="password"]:focus,
 input[type="search"]:focus,
 textarea:focus {
@@ -200,6 +202,7 @@ textarea:focus {
 }
 input[type="text"],
 input[type="email"],
+input[type="url"],
 input[type="password"],
 input[type="search"] {
 	padding: 3px;
