--- a/sassy_s/style.scss
+++ b/sassy_s/style.scss
@@ -7,6 +7,8 @@ Description: Hi. I'm a starter theme called <code>_s</code>, or <em>underscores<
 Version: 1.3-wpcom
 License: GNU General Public License v2 or later
 License URI: License URI: http://www.gnu.org/licenses/gpl-2.0.html
+Text Domain: _s
+Tags:
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
