Be more specific with elements to be cleared. See https://github.com/Automattic/_s/commit/dff92a0e9e0c6e101b4b189341f7aca9b3f12820#diff-da232d78aa810382f2dcdceae308ff8e

--- a/sassy_s/_global.scss
+++ b/sassy_s/_global.scss
@@ -51,7 +51,10 @@
 
 /* Clearing */
 .clear,
-[class*="content"],
-[class*="site"] {
+.entry-content,
+.comment-content,
+.site-header,
+.site-content,
+.site-footer {
 	@include clearfix;
 }
