Move box-sizing border-box to reset and clean up one redundant case. See https://github.com/Automattic/_s/commit/73d72d6791998dfb1b295e105248ee611fe13ed9#diff-da232d78aa810382f2dcdceae308ff8e

--- a/sassy_s/_reset.scss
+++ b/sassy_s/_reset.scss
@@ -25,6 +25,13 @@ html {
 	-webkit-text-size-adjust: 100%; /* Prevents iOS text size adjust after orientation change, without disabling user zoom */
 	-ms-text-size-adjust: 100%; /* www.456bereastreet.com/archive/201012/controlling_text_size_in_safari_for_ios_without_disabling_user_zoom/ */
 }
+*,
+*:before,
+*:after { /* apply a natural box layout model to all elements; see http://www.paulirish.com/2012/box-sizing-border-box-ftw/ */
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
 body {
 	background: #fff;
 }
