Break out form inputs to their own partial.

--- a/sassy_s/style.scss
+++ b/sassy_s/style.scss
@@ -34,6 +34,7 @@ and Blueprint http://www.blueprintcss.org/
 // feel free to add any new files you want; if you add them this list they'll be included
 @import 'global';
 @import 'typography';
+@import 'forms';
 @import 'layout';
 @import 'menu';
 @import 'content';
