Fix layout mixin documentation to remove invalid layouts.

--- a/sassy_s/_settings.scss
+++ b/sassy_s/_settings.scss
@@ -13,7 +13,7 @@ $link-color: royalblue;
 $link-visited: purple;
 
 /* Supported Values for $layout:
-  null | content-sidebar | content-sidebar-sidebar | sidebar-content | sidebar-content-sidebar | sidebar-sidebar-content
+  null | content-sidebar | sidebar-content
 */
 $layout: null !default;
 $vspacing: 1.5em;
