--- a/sassy_s/_mixins.scss
+++ b/sassy_s/_mixins.scss
@@ -8,8 +8,8 @@
     }
 }
 
-@mixin hoverActiveFocus($property, $value) {
+@mixin hoverActiveFocus() {
     &:hover, &:active, &:focus {
-        #{$property}: $value;
+        @content;
     }
 }
